change repo and Author and Genre services