@@ -8,7 +8,6 @@ import ru.otus.hw.dto.GenreDto;
 import ru.otus.hw.repositories.GenreRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -22,6 +21,6 @@ public class GenreServiceImpl implements GenreService {
     public List<GenreDto> findAll() {
         return genreRepository.findAll().stream()
                 .map(genreConverter::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
